<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GolfApp</string>
    <string name="newRound">Neue Runde starten</string>
    <string name="playRound">Runde spielen</string>
    <string name="continueRound">Runde fortsetzen</string>
    <string name="setShots">Schl&#228;ge eintragen</string>
    <string name="player">Spieler</string>
    <string name="enterYourName">Name</string>
    <string name="handicap">Handicap</string>
    <string name="gender">Geschlecht</string>
    <string name="chooseGender">Geschlecht w&#228;hlen</string>
    <string name="addPlayer">Spieler hinzuf&#252;gen</string>
    <string name="selectPlayer">Spieler w&#228;hlen</string>
    <string name="golfCourse">Pl&#228;tze</string>
    <string name="selectGolfCourse">Golfplatz w&#228;hlen</string>
    <string name="history">Historie</string>
    <string name="settingsShort">Einstell.</string>
    <string name="settings">Einstellungen</string>
    <string name="mainHeader">GolfApp - by KEKS</string>
    <string name="managePlayer">Spieler verwalten</string>
    <string name="ok">OK</string>
    <string name="add">Neu</string>
    <string name="delete">L&#246;schen</string>
    <string name="cancel">Abbr.</string>
    <string name="result">Resultat</string>
    <string name="resultSum">Resultat - Summe aller Schläge</string>
    <string name="end">Runde beenden</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="deleteRound"></string>
    <string name="setShotsselectPlayer">Spieler wählen um Schläge einzutragen</string>
</resources>

