<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="10dip">
   
    <TextView android:textSize="22px" android:textStyle="bold" android:text="@string/mainHeader" android:id="@+id/he1" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
	
    <ImageView android:adjustViewBounds="true" android:layout_marginTop="10dip" android:layout_marginBottom="10dip"  android:layout_width="wrap_content" android:id="@+id/startImage" android:src="@drawable/main" android:layout_gravity="center" android:layout_height="wrap_content" />

	<Button android:layout_width="fill_parent" android:text="@string/newRound"
		android:id="@+id/newRound" android:layout_height="wrap_content" />
		
	<Button android:layout_width="fill_parent" android:text="@string/continueRound"
		android:id="@+id/continueRound" android:layout_height="wrap_content" />

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="1">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
			<Button android:text="@string/player" android:id="@+id/player"
				android:drawableLeft="@android:drawable/ic_menu_myplaces" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1" />

			<Button android:text="@string/golfCourse" android:id="@+id/golfCourse"
				android:drawableLeft="@android:drawable/ic_menu_mylocation" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1" />

		</LinearLayout>

		<TableRow>
		
			<Button android:text="@string/history" android:id="@+id/history"
				android:drawableLeft="@android:drawable/ic_menu_info_details" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="left" />

			<Button android:text="@string/settingsShort" android:id="@+id/settings"
				android:drawableLeft="@android:drawable/ic_menu_preferences"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="right" />

		</TableRow>
	</TableLayout>
</LinearLayout>
